[package]
edition = "2021"
name = "cryptopals"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
# anyhow = "1.0.57"
bytecount = "0.6.3"
# image = "0.24.2"
itertools = "0.10.3"
# num-complex = "0.4.2"
# thiserror = "1.0.31"
rand = "0.8.5"
yansi = "0.5.1"

# [[bin]]
# name = "sort_dedup"
# path = "src/main.rs"
